--- a/trabajo_micros/trabajo_micros.ioc
+++ b/trabajo_micros/trabajo_micros.ioc
@@ -7,6 +7,7 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 File.Version=6
 KeepUserPlacement=false
+Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=NVIC
@@ -16,29 +17,89 @@ Mcu.IPNb=4
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA0-WKUP
-Mcu.Pin1=VP_SYS_VS_tim1
-Mcu.PinsNb=2
+Mcu.Pin1=PA1
+Mcu.Pin10=PB2
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
+Mcu.Pin2=PA2
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_SYS_VS_tim1
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
+PA1.Locked=true
+PA1.Signal=ADCx_IN1
+PA10.Locked=true
+PA10.Signal=GPXTI10
+PA11.Locked=true
+PA11.Signal=GPXTI11
+PA12.Locked=true
+PA12.Signal=GPXTI12
+PA2.Locked=true
+PA2.Signal=GPXTI2
+PA3.Locked=true
+PA3.Signal=GPXTI3
+PA4.Locked=true
+PA4.Signal=GPXTI4
+PA5.Locked=true
+PA5.Signal=GPXTI5
+PA6.Locked=true
+PA6.Signal=GPXTI6
+PA7.Locked=true
+PA7.Signal=GPXTI7
+PA8.Locked=true
+PA8.Signal=GPXTI8
+PA9.Locked=true
+PA9.Signal=GPXTI9
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -67,7 +128,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=14285714.285714285
 RCC.AHBFreq_Value=25000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -104,8 +165,31 @@ RCC.VCOOutputFreq_Value=100000000
 RCC.VcooutputI2S=192000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=STM32F407G-DISC1
 boardIOC=true
-isbadioc=false
