--- a/trabajo_micros/trabajo_micros.ioc
+++ b/trabajo_micros/trabajo_micros.ioc
@@ -24,16 +24,16 @@ Mcu.Pin1=PH1-OSC_OUT
 Mcu.Pin10=PB0
 Mcu.Pin11=PB1
 Mcu.Pin12=PB2
-Mcu.Pin13=PD12
-Mcu.Pin14=PD13
-Mcu.Pin15=PD14
-Mcu.Pin16=PD15
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin13=PB10
+Mcu.Pin14=PB11
+Mcu.Pin15=PB13
+Mcu.Pin16=PD12
+Mcu.Pin17=PD13
+Mcu.Pin18=PD14
+Mcu.Pin19=PD15
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
 Mcu.Pin22=PB3
 Mcu.Pin23=PB4
 Mcu.Pin24=PB5
@@ -58,7 +58,6 @@ MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -79,12 +78,6 @@ PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
-PA10.Locked=true
-PA10.Signal=GPXTI10
-PA11.Locked=true
-PA11.Signal=GPXTI11
-PA12.Locked=true
-PA12.Signal=GPXTI12
 PA2.Locked=true
 PA2.Signal=GPXTI2
 PA3.Locked=true
@@ -105,6 +98,12 @@ PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB10.Locked=true
+PB10.Signal=GPXTI10
+PB11.Locked=true
+PB11.Signal=GPXTI11
+PB13.Locked=true
+PB13.Signal=GPXTI13
 PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.Locked=true
@@ -205,8 +204,8 @@ SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
 SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
-SH.GPXTI12.0=GPIO_EXTI12
-SH.GPXTI12.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
